--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
+  </head>
 
-</head>
-
-<body>
-
-
-
-
-</body>
-<script src="javascript.js"></script>
-
+  <body>
+    <h1>Hello</h1>
+  </body>
+  <script src="javascript.js"></script>
 </html>
